# speech-collator

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: create_speaker2idx_and_phone2idx.py
speech_collator/: __init__.py
speech_collator/measures/: __init__.py  snr.py  srmr.py
