
[project]
name = "speech-collator"
version = "0.1.8"
description = "A collator for speech datasets with different batching strategies and attribute extraction."
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "numpy<1.24",
    "pyworld>=0.3.3",
    "librosa<0.10",
    "scipy>=1.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
